Sorgente/.apex/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Addetto_prevendita_correlato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Addetto prevendita correlato</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agente_Appuntamento_1__c</fullName>
        <formula>Agente_che_fa_appuntamento__c</formula>
        <label>Agente Appuntamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agente_Appuntamento__c</fullName>
        <label>Agente Appuntamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Force.com - App Subscription User (KAM)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agente_che_fa_appuntamento__c</fullName>
        <description>Agente che fa appuntamento o Agente preso da opportunità</description>
        <label>Agente correlato</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Società</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SS</fullName>
                </value>
                <value>
                    <fullName>SG</fullName>
                </value>
                <value>
                    <fullName>GS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chiusura__c</fullName>
        <label>Chiusura</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Codice_fiscale__c</fullName>
        <label>Codice fiscale</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conferma_perdita_SG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conferma perdita SG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conferma_perdita_SS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conferma perdita SS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coniuge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coniuge</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Controllo_referto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Controllo referto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Convertito__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convertito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Costo_servizio_scelto__c</fullName>
        <description>Test SFDC</description>
        <label>Costo servizio scelto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DB_Genetica__c</fullName>
        <label>DB_Genetica</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Creazione_Anagrafica__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Data Creazione Anagrafica</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_firma_contratto__c</fullName>
        <description>Data firma contratto - come su Opportunita&apos;</description>
        <label>Data firma contratto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_ordine__c</fullName>
        <label>Data ordine</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_presunta_parto__c</fullName>
        <label>Data presunta parto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_ricontatto__c</fullName>
        <label>Data ricontatto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dettagli__c</fullName>
        <label>Dettagli</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dettaglio_origine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dettaglio specialista</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <errorMessage>Il valore non esiste. Creane uno nuovo.</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Specialista, Collaboratore, Referente aziendale</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dettaglio_origine_aperto__c</fullName>
        <label>Dettaglio origine aperto</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dettaglio_origine_sconosciuto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dettaglio origine sconosciuto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dettaglio_professional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dettaglio professional</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Il valore non esiste, aggiungere nuovo.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Professional</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account (Dettaglio origine professional)</relationshipLabel>
        <relationshipName>Account1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Documenti_aggiuntivi_raccolta_tessuto__c</fullName>
        <label>Documenti aggiuntivi raccolta tessuto</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_principale__c</fullName>
        <label>Email principale</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_secondaria__c</fullName>
        <label>Email secondaria</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ricontatto</fullName>
                </value>
                <value>
                    <fullName>Ric. Guida i-G</fullName>
                </value>
                <value>
                    <fullName>Ric. Guida i-M</fullName>
                </value>
                <value>
                    <fullName>P.a.</fullName>
                </value>
                <value>
                    <fullName>Ric. guida B-V</fullName>
                </value>
                <value>
                    <fullName>Ricontatto guida B-V</fullName>
                </value>
                <value>
                    <fullName>Ric. guida CPP</fullName>
                </value>
                <value>
                    <fullName>Ric. guida i-O</fullName>
                </value>
                <value>
                    <fullName>Ric. info</fullName>
                </value>
                <value>
                    <fullName>Ric. guida i-C</fullName>
                </value>
                <value>
                    <fullName>Ric. guida i-CG</fullName>
                </value>
                <value>
                    <fullName>Csco-bc</fullName>
                </value>
                <value>
                    <fullName>Csco-br</fullName>
                </value>
                <value>
                    <fullName>Cpp-h</fullName>
                </value>
                <value>
                    <fullName>Cpp-p</fullName>
                </value>
                <value>
                    <fullName>Cpp-dx</fullName>
                </value>
                <value>
                    <fullName>Csco-p</fullName>
                </value>
                <value>
                    <fullName>Ric. guida i-Mand</fullName>
                </value>
                <value>
                    <fullName>Landing</fullName>
                </value>
                <value>
                    <fullName>Sito mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forza_codice_fiscale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forza codice fiscale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequenza_pubblicazione__c</fullName>
        <label>Frequenza pubblicazione</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bimestrale</fullName>
                </value>
                <value>
                    <fullName>Semestrale</fullName>
                </value>
                <value>
                    <fullName>Aperiodico</fullName>
                </value>
                <value>
                    <fullName>Mensile</fullName>
                </value>
                <value>
                    <fullName>Trimestrale</fullName>
                </value>
                <value>
                    <fullName>Settimanale</fullName>
                </value>
                <value>
                    <fullName>Quadrimestrale</fullName>
                </value>
                <value>
                    <fullName>Annuale</fullName>
                </value>
                <value>
                    <fullName>Quindicinale</fullName>
                </value>
                <value>
                    <fullName>Bisettimanale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ginecologo__c</fullName>
        <label>Ginecologo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Account__c</fullName>
        <externalId>true</externalId>
        <label>ID Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listino__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Listino prezzi</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_opportunit_SG_60__c</fullName>
        <label>Max opportunità SG (60)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_opportunit_SS_90__c</fullName>
        <label>Max opportunità SS (90)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monte_punti_consiglio_SG__c</fullName>
        <label>Monte punti consiglio SG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monte_punti_consiglio_SS__c</fullName>
        <label>Monte punti consiglio SS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Motivazione_perdita_SG__c</fullName>
        <label>Motivazione perdita SG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prezzo prodotti</fullName>
                </value>
                <value>
                    <fullName>Qualità prodotti</fullName>
                </value>
                <value>
                    <fullName>Qualità servizio</fullName>
                </value>
                <value>
                    <fullName>Listino incompleto</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivazione_perdita_SS__c</fullName>
        <label>Motivazione perdita SS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pro-donazione</fullName>
                </value>
                <value>
                    <fullName>Esclusività con competitor</fullName>
                </value>
                <value>
                    <fullName>Qualità prodotto</fullName>
                </value>
                <value>
                    <fullName>Qualità servizio</fullName>
                </value>
                <value>
                    <fullName>Prezzo servizio al paziente</fullName>
                </value>
                <value>
                    <fullName>Punti consiglio bassi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nome_Numero_citofono_1__c</fullName>
        <label>Citofono spedizione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Numero_citofono__c</fullName>
        <label>Citofono fatturazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_professional__c</fullName>
        <label>Nome professional</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Deduplicare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forza Duplicato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_contattare_pazienti__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non contattare pazienti</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note_per_operatore__c</fullName>
        <label>Note per operatore</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunit_SG_60__c</fullName>
        <label>Opportunità SG (60)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunit_SG_Aperto__c</fullName>
        <label>Opportunità SG/Aperto</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Aperto</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>SG</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunit_SG_Chiuso_Perso__c</fullName>
        <label>Opportunità SG/Chiuso Perso</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Chiuso perso</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunit_SS_90__c</fullName>
        <label>Opportunità SS (90)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunit_SS_Aperto__c</fullName>
        <label>Opportunità SS/Aperto</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Aperto</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>SS</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunit_SS_Chiuso_Perso__c</fullName>
        <label>Opportunità SS/Chiuso Perso</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Chiuso perso</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>SS</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunit_SS_Cliente__c</fullName>
        <label>Opportunità SS/Cliente</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>SS</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>In firma, Preparto, In attesa parto, Post parto, Da pianificare prelievo, IA prelievo, Campione spedito verso SG, Campione Spedito verso Lab, Risultati da comunicare, Chiuso vinto, Chiuso da ripetere</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ord_60_SG__c</fullName>
        <formula>TODAY() -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ord (60) SG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origine__c</fullName>
        <label>Origine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amici/conoscenti</fullName>
                </value>
                <value>
                    <fullName>Corso Preparto</fullName>
                </value>
                <value>
                    <fullName>Siti e app satellite</fullName>
                </value>
                <value>
                    <fullName>Social media</fullName>
                </value>
                <value>
                    <fullName>Giornali/riviste</fullName>
                </value>
                <value>
                    <fullName>Fiere e Convegni</fullName>
                </value>
                <value>
                    <fullName>Specialista</fullName>
                </value>
                <value>
                    <fullName>KAM</fullName>
                </value>
                <value>
                    <fullName>Siti extra gruppo</fullName>
                </value>
                <value>
                    <fullName>Motore di ricerca</fullName>
                </value>
                <value>
                    <fullName>Pieghevole</fullName>
                </value>
                <value>
                    <fullName>Programma Amico</fullName>
                </value>
                <value>
                    <fullName>Collaboratore</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
                <value>
                    <fullName>Da verificare</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Cross selling</fullName>
                </value>
                <value>
                    <fullName>Già cliente</fullName>
                </value>
                <value>
                    <fullName>Cross selling - Aurora</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origine_definitiva__c</fullName>
        <label>Origine definitiva</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partita_IVA__c</fullName>
        <label>Partita IVA</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personale_per_prelievo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personale per prelievo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presente_su_Gestionale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica se l&apos;account (professional) è sincronizzato con un record nella tabella Ospedali del Gestionale.</description>
        <label>Presente su Gestionale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy_1__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Privacy 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privacy 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privacy 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prodotto__c</fullName>
        <label>Prodotto</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Unit__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aurora</fullName>
                </value>
                <value>
                    <fullName>BRCA</fullName>
                </value>
                <value>
                    <fullName>Trombofilia</fullName>
                </value>
                <value>
                    <fullName>Glaucoma</fullName>
                </value>
                <value>
                    <fullName>Screening neonatale</fullName>
                </value>
                <value>
                    <fullName>Celiachia</fullName>
                </value>
                <value>
                    <fullName>Salute completa</fullName>
                </value>
                <value>
                    <fullName>Dieta +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profilo_creatore__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profilo creatore</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prova_Alessio__c</fullName>
        <label>Prova Alessio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Punti_consiglio_riscattati_SG__c</fullName>
        <formula>Punti_consiglio_totali_SG__c -  Monte_punti_consiglio_SG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Punti consiglio riscattati SG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Punti_consiglio_riscattati_SS__c</fullName>
        <formula>Punti_consiglio_totali_SS__c -  Monte_punti_consiglio_SS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Punti consiglio riscattati SS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Punti_consiglio_totali_SG__c</fullName>
        <label>Punti consiglio totali SG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Punti_consiglio_totali_SS__c</fullName>
        <label>Punti consiglio totali SS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Punto_di_prelievo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Punto di prelievo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Raccolta_tessuto__c</fullName>
        <description>Indica se un Ospedale raccoglie o no il tessuto cordonale</description>
        <label>Raccolta tessuto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da verificare</fullName>
                    <default>true</default>
                    <label>Da verificare</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referente_programma_amico__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referente programma amico</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Prospect/cliente</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programma Amico</relationshipLabel>
        <relationshipName>Referente_programma_amico_account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regione__c</fullName>
        <label>Regione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Richiesta_guida__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Richiesta guida cartacea</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Richiesta_guida_telematica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Richiesta guida telematica</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Riconosci_ad_agente_del_referente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Riconosci ad agente dei referenti</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ruolo_creatore__c</fullName>
        <formula>IF(CreatedBy.Email = &quot;sara.larocca@sorgente.com&quot;,&quot;&quot;,IF(CreatedBy.Email = &quot;stefano.saraino@sorgente.com&quot;,&quot;&quot;,IF(CreatedBy.Email = &quot;monica.lotta@sorgente.com&quot;,&quot;&quot;,IF(CreatedBy.Email = &quot;carmen.bazu@sorgente.com&quot;,&quot;&quot;,IF(CreatedBy.Email = &quot;salvatore.cavaliere@sorgente.com&quot;,&quot;&quot;,IF(CreatedBy.Email = &quot;clienti@sorgente.com&quot;,&quot;&quot;,IF(CreatedBy.Email = &quot;analista@sorgente.com&quot;,&quot;&quot;,IF(CreatedBy.Email = &quot;roberto.marani@sorgente.com&quot;,&quot;&quot;,IF(CreatedBy.Email = &quot;paolo@weblight.it&quot;,&quot;&quot;,IF(CreatedBy.Email = &quot;ssineriz@gmail.com&quot;,&quot;&quot;,&quot;KAM&quot;))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ruolo creatore</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sottocategoria__c</fullName>
        <label>Sottocategoria</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor SG</fullName>
                </value>
                <value>
                    <fullName>Competitor SS</fullName>
                </value>
                <value>
                    <fullName>Competitor GS</fullName>
                </value>
                <value>
                    <fullName>Lab nazionali</fullName>
                </value>
                <value>
                    <fullName>Lab UE</fullName>
                </value>
                <value>
                    <fullName>Lab extra UE</fullName>
                </value>
                <value>
                    <fullName>Corriere nazionali</fullName>
                </value>
                <value>
                    <fullName>Corriere internazionali</fullName>
                </value>
                <value>
                    <fullName>On-Line News</fullName>
                </value>
                <value>
                    <fullName>Periodici al Pubblico (Riviste)</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Periodici di Categoria</fullName>
                </value>
                <value>
                    <fullName>Supplementi</fullName>
                </value>
                <value>
                    <fullName>Quotidiani</fullName>
                </value>
                <value>
                    <fullName>News / TG</fullName>
                </value>
                <value>
                    <fullName>Agenzie Stampa</fullName>
                </value>
                <value>
                    <fullName>News / GR</fullName>
                </value>
                <value>
                    <fullName>Programmi TV</fullName>
                </value>
                <value>
                    <fullName>Editore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sottocategoria_origine__c</fullName>
        <label>Sottocategoria origine</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Origine__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CSCO</fullName>
                </value>
                <value>
                    <fullName>Ok Corso Preparto</fullName>
                </value>
                <value>
                    <fullName>CCS</fullName>
                </value>
                <value>
                    <fullName>Diagnosi prenatale</fullName>
                </value>
                <value>
                    <fullName>BRCA</fullName>
                </value>
                <value>
                    <fullName>Baby&apos;s Voice</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>Bimbinfiera</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Prospect_cliente01__c</fullName>
        <label>Status Prospect/cliente</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_SG__c</fullName>
        <label>Status SG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aperto</fullName>
                </value>
                <value>
                    <fullName>Perso</fullName>
                </value>
                <value>
                    <fullName>Da affiliare o associare</fullName>
                </value>
                <value>
                    <fullName>Da riaffiliare</fullName>
                </value>
                <value>
                    <fullName>Da riassociare</fullName>
                </value>
                <value>
                    <fullName>Associato</fullName>
                </value>
                <value>
                    <fullName>Affiliato</fullName>
                </value>
                <value>
                    <fullName>Inattivo</fullName>
                </value>
                <value>
                    <fullName>Associato perso</fullName>
                </value>
                <value>
                    <fullName>Affiliato perso</fullName>
                </value>
                <value>
                    <fullName>IA prodotto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>